--- a/styles/style.css
+++ b/styles/style.css
@@ -29,6 +29,7 @@ body {
    font-size: 18px;
    min-width: 600px;
    min-height: 100px;
+   padding: 10px;
 }
 
 .keyboard {
@@ -71,36 +72,22 @@ body {
    background-color: var(--color-active);
 }
 
-.Backspace {
+.keyboard__key--size-l {
    min-width: 140px;
 }
 
-.Tab {
+.keyboard__key--size-xs {
    min-width: 60px;
 }
 
-.Delete {
-   min-width: 60px;
-}
-
-.CapsLock {
+.keyboard__key--size-s {
    min-width: 100px;
 }
 
-.Enter {
-   min-width: 140px;
-}
-
-.ShiftLeft,
-.ShiftRight {
+.keyboard__key--size-m {
    min-width: 120px;
 }
 
-.ControlLeft,
-.ControlRight {
-   min-width: 60px;
-}
-
-.Space {
+.keyboard__key--size-xl {
    min-width: 400px;
 }
