--- a/styles/style.css
+++ b/styles/style.css
@@ -35,20 +35,20 @@ body {
 .keyboard {
    display: flex;
    gap: 10px;
-   flex-direction: column;
+   /* flex-direction: column; */
+   flex-direction: row;
+   flex-wrap: wrap;
+   width: 930px;
    background-color: var(--color-primary);
    border-radius: 10px;
    padding: 10px;
    box-shadow: 2px 3px 20px rgba(0, 0, 0, 0.3);
 }
 
-.keyboard__row {
-   display: flex;
-   gap: 10px;
-}
-
 .keyboard__key {
    user-select: none;  
+   -webkit-user-select: none;
+   -moz-user-select: none;
    position: relative;
    display: flex;
    justify-content: center;
@@ -61,6 +61,7 @@ body {
    cursor: pointer;
    transition: all .2s;
    box-shadow: 1px 3px 10px rgba(0, 0, 0, 0.3);
+   transition: .1s;
 }
 
 .keyboard__key:hover {
